@@ -1,10 +1,12 @@
 class ArticleObserver < ActiveRecord::Observer
   def before_save(record)
-    @event = Event.new 
-    @event.mode = case
-      when record.is_a?(Comment) then 'comment'
-      when record.new_record?    then 'publish'
-      else 'edit'
+    if (record.is_a?(Article) && record.save_version?) || record.is_a?(Comment)
+      @event = Event.new
+      @event.mode = case
+        when record.is_a?(Comment) then 'comment'
+        when record.new_record?    then 'publish'
+        else 'edit'
+      end
     end
   end
 
