@@ -1,5 +1,7 @@
 * SVN *
 
+* Don't generate an article event for unversioned changes. [Marcus Brito]
+
 * Switch to will_paginate plugin [Mislav]
 
 * unit test fixes for those not using mysql or psql [Mislav]
